--- a/lib/nvd3/src/nv.d3.css
+++ b/lib/nvd3/src/nv.d3.css
@@ -153,6 +153,10 @@ svg .title {
   stroke-opacity: .75;
 }
 
+.nvd3 .nv-axis.nv-x path.domain {
+  stroke-opacity: 0;
+}
+
 .nvd3 .nv-axis line {
   fill: none;
   stroke: #000;
@@ -167,6 +171,13 @@ svg .title {
 .nvd3 .nv-axis .nv-axisMaxMin text {
   font-weight: bold;
 }
+
+.nvd3 .x  .nv-axis .nv-axisMaxMin text,
+.nvd3 .x2 .nv-axis .nv-axisMaxMin text,
+.nvd3 .x3 .nv-axis .nv-axisMaxMin text {
+  text-anchor: middle
+}
+
 
 
 /**********
